--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     </head>
     <body style="display: flex;">
         
-        <h1 style="font-size: 100px;">Page
-            Unavailable
+        <h1 style="font-size: 100px;">Page Down For Maintenance
         </h1>
         <img src="sad.png" width=500 height=500/>
     </body>
